log/build_2021-05-31_18-35-40/gazebo_plugin_sim/stderr.log
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘void gazebo_plugin_sim::PlatformPluginTestPrivate::OnUpdate(const gazebo::common::UpdateInfo&)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:227:10: error: expected unqualified-id before ‘=’ token
  227 |   double = 1;
      |          ^
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:228:24: error: ‘velM1’ was not declared in this scope; did you mean ‘vel_M1_’?
  228 |   sim_vel_M1_->publish(velM1);
      |                        ^~~~~
      |                        vel_M1_
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
